--- a/client/src/components/SearchBar/SearchBar.module.css
+++ b/client/src/components/SearchBar/SearchBar.module.css
@@ -7,7 +7,7 @@
     height: 100%;
     width: 47%;
     font-size: 1.3rem;
-    border: 1px solid #25b687;
+    border: 1px solid #253db6;
     border-top: none;
     outline: none;
     border-bottom-left-radius: 10px;
